added in person and address

--- a/about.html
+++ b/about.html
@@ -57,6 +57,7 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     rel="stylesheet"
   />
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
   <!-- Main custom CSS (shared) -->
   <link href="css/custom.css" rel="stylesheet" />
 </head>
@@ -479,38 +480,44 @@
     </div>
   </div> <!-- End .content-container -->
 
-  <!-- Footer -->
-  <footer class="footer mt-auto">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4 mb-4">
-          <h5>Quick Links</h5>
-          <a href="index.html">Home</a> |
-          <a href="about.html">About</a> |
-          <a href="services.html">Services</a> |
-          <a href="contact.html">Contact</a>
+  <!-- ======== FOOTER ======== -->
+    <footer class="footer mt-auto">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 mb-4">
+            <h5>Quick Links</h5>
+            <a href="index.html">Home</a> |
+            <a href="about.html">About</a> |
+            <a href="services.html">Services</a> |
+            <a href="contact.html">Contact</a>
+          </div>
+          <div class="col-md-4 mb-4">
+            <h5>Legal</h5>
+            <a href="cookie-policy.html"
+              >Cookie Policy</a
+            >
+            <a href="privacy-policy.html"
+              >Privacy Policy</a
+            >
+          </div>
+<div class="col-md-4 mb-4 text-md-start text-center">
+  <h5>Connect with Me</h5>
+  <p><i class="bi bi-telephone-fill me-2"></i>+44 7754 141453</p>
+  <p><i class="bi bi-envelope-fill me-2"></i>
+    <a href="mailto:talkwithsian@gmail.com">talkwithsian@gmail.com</a>
+  </p>
+  <p><i class="bi bi-geo-alt-fill me-2"></i>
+    7 Hazel Drive, Penyffordd, Flintshire CH4 0NF
+  </p>
+</div>
+
         </div>
-        <div class="col-md-4 mb-4">
-          <h5>Legal</h5>
-          <a href="cookie-policy.html"
-            >Cookie Policy</a
-          >
-          <a href="privacy-policy.html"
-            >Privacy Policy</a
-          >
-        </div>
-        <div class="col-md-4 mb-4">
-          <h5>Connect with Me</h5>
-          <p>Mobile: +44 7754 141453</p>
-          <p>Email: <a href="mailto:talkwithsian@gmail.com">talkwithsian@gmail.com</a></p>
+        <div class="text-center p-3">
+          © 2025 Talk with Sian. Designed by
+          <a href="https://www.cleandesignuk.uk/" class="bold">Clean Design UK</a>
         </div>
       </div>
-      <div class="text-center p-3">
-        © 2024 Talk with Sian. Designed by
-        <a href="https://www.cleandesignuk.uk/" class="bold">Clean Design UK</a>
-      </div>
-    </div>
-  </footer>
+    </footer>
 
   <!-- Bootstrap JS Bundle with Popper -->
   <script
