--- a/contact.html
+++ b/contact.html
@@ -55,6 +55,8 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     rel="stylesheet"
   />
+
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
   <!-- Main custom CSS (shared) -->
   <link href="css/custom.css" rel="stylesheet" />
 </head>
@@ -134,7 +136,8 @@
     <div class="contact-hero-section my-5 py-5 px-3 mb-4">
       <h1>Talk with a Professional Therapist</h1>
       <p class="lead p-md-3 text-white">
-        I provide remote EFT therapy and compassionate counselling for women in Chester &amp; Flintshire. Talk with me today to book your session or ask any questions.
+        I provide <strong>online and in-person EFT therapy</strong> and compassionate counselling for women in Chester &amp; Flintshire.
+    Book your preferred session type today or reach out with any questions.
       </p>
       <a href="services.html" class="btn btn-primary">
         Book Your Session – Talk with a Therapist
@@ -142,7 +145,7 @@
           </div>
 
     <div class="contact-form-section p-4 mb-4">
-      <h2 class="text-center mb-3">Reach Out for Remote Session Enquiries</h2>
+      <h2 class="text-center mb-3">Reach Out for Online or In-person Session Enquiries</h2>
       <p class="text-center mb-4">
         Please fill out the form below, and I will get back to you as soon as possible.
         Your information is confidential and will be treated with the utmost care.
@@ -184,6 +187,12 @@
           </button>              
         </div>
       </form>
+      <div class="text-center mt-4">
+  <p class="mb-1"><strong>In-person Location:</strong></p>
+  <p class="mb-0">7 Hazel Drive, Penyffordd, Flintshire CH4 0NF</p>
+
+</div>
+
       <p id="formResponse" style="text-align:center; margin-top:20px;"></p>
     </div>
 
@@ -230,37 +239,44 @@
       });
     </script>
   </div>
-  <footer class="footer mt-auto">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4 mb-4">
-          <h5>Quick Links</h5>
-          <a href="index.html">Home</a> |
-          <a href="about.html">About</a> |
-          <a href="services.html">Services</a> |
-          <a href="contact.html">Contact</a>
+    <!-- ======== FOOTER ======== -->
+    <footer class="footer mt-auto">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 mb-4">
+            <h5>Quick Links</h5>
+            <a href="index.html">Home</a> |
+            <a href="about.html">About</a> |
+            <a href="services.html">Services</a> |
+            <a href="contact.html">Contact</a>
+          </div>
+          <div class="col-md-4 mb-4">
+            <h5>Legal</h5>
+            <a href="cookie-policy.html"
+              >Cookie Policy</a
+            >
+            <a href="privacy-policy.html"
+              >Privacy Policy</a
+            >
+          </div>
+<div class="col-md-4 mb-4 text-md-start text-center">
+  <h5>Connect with Me</h5>
+  <p><i class="bi bi-telephone-fill me-2"></i>+44 7754 141453</p>
+  <p><i class="bi bi-envelope-fill me-2"></i>
+    <a href="mailto:talkwithsian@gmail.com">talkwithsian@gmail.com</a>
+  </p>
+  <p><i class="bi bi-geo-alt-fill me-2"></i>
+    7 Hazel Drive, Penyffordd, Flintshire CH4 0NF
+  </p>
+</div>
+
         </div>
-        <div class="col-md-4 mb-4">
-          <h5>Legal</h5>
-          <a href="cookie-policy.html" 
-            >Cookie Policy</a
-          >
-          <a href="privacy-policy.html"
-            >Privacy Policy</a
-          >
-        </div>
-        <div class="col-md-4 mb-4">
-          <h5>Connect with Me</h5>
-          <p>Mobile: +44 7754 141453</p>
-          <p>Email: <a href="mailto:talkwithsian@gmail.com">talkwithsian@gmail.com</a></p>
+        <div class="text-center p-3">
+          © 2025 Talk with Sian. Designed by
+          <a href="https://www.cleandesignuk.uk/" class="bold">Clean Design UK</a>
         </div>
       </div>
-      <div class="text-center p-3">
-        © 2024 Talk with Sian. Designed by
-        <a href="https://www.cleandesignuk.uk/" class="bold">Clean Design UK</a>
-      </div>
-    </div>
-  </footer>
+    </footer>
 
   <!-- Bootstrap JS Bundle with Popper -->
   <script
