--- a/services.html
+++ b/services.html
@@ -55,6 +55,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 
     <!-- ======== Inline Custom CSS ======== -->
     <style>
@@ -401,7 +402,7 @@
         <p><strong>Initial Consultation:</strong> Free</p>
         <p><strong>50-Minute Session:</strong> £50</p>
         <p>
-          All my services are delivered online, offering confidential and professional therapy support from a trusted therapist, right from the comfort of your home in Chester &amp; Flintshire.
+          All my services are delivered online and in-person, offering confidential and professional therapy support from a trusted therapist, right from the comfort of your home in Chester &amp; Flintshire.
         </p>
       </div>
       
@@ -506,7 +507,7 @@
       </script>
     </div> <!-- End .content-container -->
 
-    <!-- ======== FOOTER ======== -->
+  <!-- ======== FOOTER ======== -->
     <footer class="footer mt-auto">
       <div class="container">
         <div class="row">
@@ -526,19 +527,24 @@
               >Privacy Policy</a
             >
           </div>
-          <div class="col-md-4 mb-4">
-            <h5>Connect with Me</h5>
-            <p>Mobile: +44 7754 141453</p>
-            <p>Email: <a href="mailto:talkwithsian@gmail.com">talkwithsian@gmail.com</a></p>
-          </div>
+<div class="col-md-4 mb-4 text-md-start text-center">
+  <h5>Connect with Me</h5>
+  <p><i class="bi bi-telephone-fill me-2"></i>+44 7754 141453</p>
+  <p><i class="bi bi-envelope-fill me-2"></i>
+    <a href="mailto:talkwithsian@gmail.com">talkwithsian@gmail.com</a>
+  </p>
+  <p><i class="bi bi-geo-alt-fill me-2"></i>
+    7 Hazel Drive, Penyffordd, Flintshire CH4 0NF
+  </p>
+</div>
+
         </div>
         <div class="text-center p-3">
-          © 2024 Talk with Sian. Designed by
+          © 2025 Talk with Sian. Designed by
           <a href="https://www.cleandesignuk.uk/" class="bold">Clean Design UK</a>
         </div>
       </div>
     </footer>
-
     <!-- ======== SCRIPTS ======== -->
     <!-- Bootstrap JS -->
     <script
