--- a/trauma-therapy.html
+++ b/trauma-therapy.html
@@ -45,6 +45,8 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     rel="stylesheet"
   />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+
 
   <!-- ==================== Inline Custom CSS ==================== -->
   <style>
@@ -234,6 +236,41 @@
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
+
+    /* Badge - gradient to match buttons */
+.session-badge {
+  display: inline-block;
+  background: linear-gradient(45deg, #9370DB, #856798);
+  color: #fff;
+  font-weight: 600;
+  padding: 0.5rem 0.8rem;
+  border-radius: 6px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+}
+
+/* Info Card - keeps layout consistent */
+.info-card {
+  background-color: #f8f6ff;
+  border: 1px solid #e6e0f3;
+  border-radius: 12px;
+  padding: 1.5rem 1.75rem;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.05);
+  max-width: 900px;
+  margin: 0 auto;
+}
+.info-card ul { padding-left: 1.2rem; }
+.info-card .btn-sian {
+  display: block;
+  width: 100%;
+  text-align: center;
+  border-radius: 50px;
+  padding: 0.9rem 1rem;
+}
+
+@media (max-width: 768px) {
+  .info-card { text-align: center; }
+}
+
   </style>
 </head>
 <body class="d-flex flex-column min-vh-100">
@@ -384,6 +421,34 @@
       </div>
     </div>
 
+    <!-- SESSION TYPES & LOCATION CARD -->
+<div class="info-card mt-4 mb-5">
+  <div class="row align-items-center text-center text-md-start">
+    <!-- LEFT -->
+    <div class="col-md-6 mb-3 mb-md-0">
+      <h3 class="h5 text-purple mb-3">Session Types</h3>
+      <ul class="list-unstyled mb-0">
+        <li>💻 Online sessions via secure video</li>
+        <li>🏠 In-person sessions in Penyffordd, Flintshire</li>
+      </ul>
+    </div>
+
+    <!-- RIGHT -->
+    <div class="col-md-6 d-flex flex-column align-items-center align-items-md-start">
+      <p class="fw-bold mb-1">In-person Location</p>
+      <p class="mb-3">7 Hazel Drive, Penyffordd, Flintshire CH4 0NF</p>
+      <a
+        class="btn-sian w-100 text-center"
+        href="https://www.google.com/maps/search/?api=1&query=7+Hazel+Drive,+Penyffordd,+Flintshire,+CH4+0NF"
+        target="_blank" rel="noopener"
+      >
+        Open in Google Maps
+      </a>
+    </div>
+  </div>
+</div>
+
+
     <!-- REMOTE SESSIONS BENEFITS -->
     <div class="row align-items-center g-5 mb-5">
       <div class="col-md-6">
@@ -422,42 +487,51 @@
     </div>
   </div><!-- END .content-container -->
 
-  <footer class="footer mt-auto">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4 mb-4">
-          <h5>Quick Links</h5>
-          <a href="index.html">Home</a> |
-          <a href="about.html">About</a> |
-          <a href="services.html">Services</a> |
-          <a href="contact.html">Contact</a>
+   <!-- ======== FOOTER ======== -->
+    <footer class="footer mt-auto">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 mb-4">
+            <h5>Quick Links</h5>
+            <a href="index.html">Home</a> |
+            <a href="about.html">About</a> |
+            <a href="services.html">Services</a> |
+            <a href="contact.html">Contact</a>
+          </div>
+          <div class="col-md-4 mb-4">
+            <h5>Legal</h5>
+            <a href="cookie-policy.html"
+              >Cookie Policy</a
+            >
+            <a href="privacy-policy.html"
+              >Privacy Policy</a
+            >
+          </div>
+<div class="col-md-4 mb-4 text-md-start text-center">
+  <h5>Connect with Me</h5>
+  <p><i class="bi bi-telephone-fill me-2"></i>+44 7754 141453</p>
+  <p><i class="bi bi-envelope-fill me-2"></i>
+    <a href="mailto:talkwithsian@gmail.com">talkwithsian@gmail.com</a>
+  </p>
+  <p><i class="bi bi-geo-alt-fill me-2"></i>
+    7 Hazel Drive, Penyffordd, Flintshire CH4 0NF
+  </p>
+</div>
+
         </div>
-        <div class="col-md-4 mb-4">
-          <h5>Legal</h5>
-          <a href="cookie-policy.html" 
-            >Cookie Policy</a
-          >
-          <a href="privacy-policy.html" 
-            >Privacy Policy</a
-          >
-        </div>
-        <div class="col-md-4 mb-4">
-          <h5>Connect with Us</h5>
-          <p>Mobile: +44 7754 141453</p>
-          <p>Email: <a href="mailto:talkwithsian@gmail.com">talkwithsian@gmail.com</a></p>
+        <div class="text-center p-3">
+          © 2025 Talk with Sian. Designed by
+          <a href="https://www.cleandesignuk.uk/" class="bold">Clean Design UK</a>
         </div>
       </div>
-      <div class="text-center p-3">
-        © 2024 Talk with Sian. Designed by
-        <a href="https://www.cleandesignuk.uk/" class="bold">Clean Design UK</a>
-      </div>
-    </div>
-  </footer>
+    </footer>
+
 
   <!-- ======== SCRIPTS ======== -->
   <!-- Bootstrap JS -->
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    
   ></script>
 
   <!-- Cookie Consent Script -->
