--- a/contact.html
+++ b/contact.html
@@ -189,7 +189,7 @@
       </form>
       <div class="text-center mt-4">
   <p class="mb-1"><strong>In-person Location:</strong></p>
-  <p class="mb-0">7 Hazel Drive, Penyffordd, Flintshire CH4 0NF</p>
+  <p class="mb-0">Penyffordd, Flintshire</p>
 
 </div>
 
@@ -264,9 +264,6 @@
   <p><i class="bi bi-telephone-fill me-2"></i>+44 7754 141453</p>
   <p><i class="bi bi-envelope-fill me-2"></i>
     <a href="mailto:talkwithsian@gmail.com">talkwithsian@gmail.com</a>
-  </p>
-  <p><i class="bi bi-geo-alt-fill me-2"></i>
-    7 Hazel Drive, Penyffordd, Flintshire CH4 0NF
   </p>
 </div>
 
